--- a/android/app/src/main/res/drawable/widget_background.xml
+++ b/android/app/src/main/res/drawable/widget_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#2E7D32" />
-    <corners android:radius="12dp" />
+    <solid android:color="#FFFFFF" />
+    <corners android:radius="16dp" />
     <stroke
         android:width="1dp"
-        android:color="#4CAF50" />
+        android:color="#CCE0FF" />
 </shape>
