--- a/android/app/src/main/res/xml/prayer_widget_info.xml
+++ b/android/app/src/main/res/xml/prayer_widget_info.xml
@@ -5,7 +5,7 @@
     android:minHeight="110dp"
     android:targetCellWidth="4"
     android:targetCellHeight="2"
-    android:previewImage="@drawable/widget_preview"
+    android:previewImage="@drawable/widget_preview_vector"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="900000"
     android:widgetCategory="home_screen"
